# audioswitch

./: Cargo.toml  license  readme.md
.github/: unit-tests.yml
.github/workflows/: lint.yml
src/: audio.rs  main.rs  policyconfig.rs  utility.rs
src/tests/: policyconfig_tests.rs  utility_tests.rs
