[package]
name = "audioswitch"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "audioswitch"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
]